--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # OpenRouter as OpenAI-compatible backend
 OPENAI_API_KEY=sk-or-xxxxxxxxxxxxxxxx
 OPENAI_API_BASE=https://openrouter.ai/api/v1
+LLAMA_CLOUD_API_KEY=llx-your-key-here
 # Optional but recommended by OpenRouter
 OPENROUTER_API_KEY=sk-or-xxxxxxxxxxxxxxxx
