--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ OPENAI_API_BASE=https://openrouter.ai/api/v1
 LLAMA_CLOUD_API_KEY=llx-your-key-here
 # Optional but recommended by OpenRouter
 OPENROUTER_API_KEY=sk-or-xxxxxxxxxxxxxxxx
+
+# LangSmith (optional - for observability and cost tracking)
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_API_KEY=lsv2_pt_xxxxxxxxxxxxxxxx
+LANGCHAIN_PROJECT=trial-library-rag
