feat: Implement structured logging and detailed timing instrumentation for enhanced observability.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 # OpenRouter as OpenAI-compatible backend
 OPENAI_API_KEY=sk-or-xxxxxxxxxxxxxxxx
 OPENAI_API_BASE=https://openrouter.ai/api/v1
-LLAMA_CLOUD_API_KEY=llx-your-key-here
-# Optional but recommended by OpenRouter
-OPENROUTER_API_KEY=sk-or-xxxxxxxxxxxxxxxx
 
 # LangSmith (optional - for observability and cost tracking)
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_API_KEY=lsv2_pt_xxxxxxxxxxxxxxxx
 LANGCHAIN_PROJECT=trial-library-rag
+
+# Logging Configuration
+# Valid levels: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Default: INFO (shows timing data for demos)
+LOG_LEVEL=INFO
